# tap-qualified

./: README.md  meltano.yml  pyproject.toml  schema_inferrer.py  tox.ini
tap_qualified/: client.py  streams.py  tap.py
tap_qualified/schemas/: bot_conversations.json  rep_conversations.json
tap_qualified/tests/: __init__.py  test_core.py
