[tool.poetry]
name = "tap-qualified"
version = "1.0.0"
description = "`tap-qualified` is a Singer tap for Qualified, built with the Meltano Singer SDK."
authors = ["Alex Butler"]
keywords = ["ELT", "Qualified"]
license = "Apache 2.0"
readme = "README.md"
homepage = "https://github.com/z3z1ma/tap-qualified"
repository = "https://github.com/z3z1ma/tap-qualified"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "<3.12,>=3.8"
singer-sdk = { version = ">=0.19.0,<1" }
fs-s3fs = { version = ">=1.1.1", optional = true }
requests = ">=2.28.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.1"
flake8 = ">=5.0.4"
black = ">=22.12.0"
pydocstyle = ">=6.2.1"
mypy = ">=0.991"
isort = ">=5.12.0"
types-requests = ">=2.28.11.7"
genson = "^1.2.2"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = "tap_qualified"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tap-qualified = 'tap_qualified.tap:TapQualified.cli'
